<resources>
    <string name="app_name">Re:Open</string>

    <string name="featured_text">Featured</string>
    <string name="restaurants_text">Restaurants</string>
    <string name="shopping_text">Shopping</string>
    <string name="services_text">Services</string>
    <string name="other_text">Other</string>

    <string name="toolbar_search_field_hint">Search Businesses</string>
    <string name="menu_post">Post</string>
    <string name="menu_logout">Log out</string>
    <string name="title_activity_profile_map">Map</string>

    <string name="business_name_long">Business Name: </string>
    <string name="address_line">Address: </string>
    <string name="phone_number">Phone Number: </string>
    <string name="opening_date">Opening Date: </string>
    <string name="bus_profile_email">Email: </string>

    <!-- Strings for register/login -->
    <string name="login_title">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new account</string>

    <!-- Strings for sign up page-->
    <string name="sign_up_title">Register Your Business\'\n Re-opening</string>
    <string name="business_name">Business Name</string>
    <string name="business_address">Address</string>
    <string name="business_email">Email</string>
    <string name="business_phone">Phone</string>
    <string name="business_date">Opening Date</string>
    <string name="business_description">Description (Max 280 chars.)\n\n\n\n</string>
    <string name="business_image_url">Image URL (Optional)</string>
    <string name="post_button">POST YOUR LISTING</string>

    <!-- Strings for sign up spinner -->
    <!-- Note: These strings are passed to database for "category" type.-->
    <string-array name="business_categories">
        <item>Business Category</item>
        <item>Restaurant</item>
        <item>Shopping</item>
        <item>Services</item>
        <item>Other</item>
    </string-array>

    <!-- Months that are in spinner.-->
    <string-array name="months_spinner_items">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <!-- Days that are in spinner.-->
    <string-array name="days_spinner_items">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

</resources>