<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvApp"
        style="@style/InputHeader"
        android:text="@string/create_new_account" />

    <EditText
        android:id="@+id/editEmail"
        style="@style/TextPrompt"
        android:layout_marginVertical="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editPassword"
        style="@style/TextPrompt"
        android:layout_marginVertical="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="true"
        android:text="@string/register" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="250dp"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center_horizontal"
        android:max="100"
        android:indeterminate="true"
        android:visibility="invisible"
        android:progress="1" />

</LinearLayout>